<resources>
    <string name="app_name">RegistrationApp</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="registration">Registration</string>
    <string name="repeat_the_password">Repeat the password you entered above</string>
    <string name="invalid_name">Invalid name. The name must consist of at least 2 letters</string>
    <string name="invalid_password">Invalid password. The password must contain at least one uppercase and lowercase letter, as well as a number. The minimum length is 5 characters</string>
    <string name="invalid_surname">Invalid surname. The surname must consist of at least 2 letters</string>
    <string name="invalid_confirm">Passwords don\'t match</string>
    <string name="invalid_birth_date">There must be at least some date here</string>
    <string name="greeting">Greeting</string>
    <string name="ok">OK</string>
    <string name="date">%d.%d.%d</string>
    <string name="greeting_message">Hello, dear %s! We are glad to welcome you to our universal application, which can do nothing but welcome. We hope that you will continue to use this wonderful application and wish you all the best!</string>
</resources>